[gd_scene load_steps=2 format=3 uid="uid://beje45giu111w"]

[ext_resource type="Script" uid="uid://c6dre202oi18w" path="res://scripts/ui/PunnettSquare.gd" id="1_punnett"]

[node name="PunnettSquare" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 280.0
offset_bottom = 320.0
script = ExtResource("1_punnett")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 379.0
offset_bottom = 320.0

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 270.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 18
text = "Punnett Square: Fire Trait"
horizontal_alignment = 1

[node name="TraitSelector" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 130.0
offset_bottom = 65.0

[node name="ParentALabel" type="Label" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 45.0
offset_right = 270.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 20
text = "      F       f"
horizontal_alignment = 1

[node name="ParentBLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 90.0
offset_right = 50.0
offset_bottom = 190.0
theme_override_font_sizes/font_size = 20
text = "F

f"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 90.0
offset_right = 270.0
offset_bottom = 190.0
columns = 2

[node name="Cell0" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "FF"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cell1" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Ff"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cell2" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Ff"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cell3" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "ff"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProbabilityLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 190.0
offset_right = 270.0
offset_bottom = 310.0
theme_override_font_sizes/font_size = 16
text = "Predicted Offspring:
üî• Fire-breather: 75%
‚ùÑÔ∏è No Fire: 25%"
horizontal_alignment = 1
